[package]
name = "messaging_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tokio-stream = "0.1"
